overflow-y in dasboard fixed

--- a/apps/web/src/app/globals.scss
+++ b/apps/web/src/app/globals.scss
@@ -157,6 +157,7 @@ label.small {
     margin-right: 0;
     width: 100%;
     padding-bottom: 96px;
+    overflow: hidden;
   }
 }
 
@@ -176,6 +177,7 @@ label.small {
     .main-content-wrapper {
       margin-left: 0;
       width: 100%;
+      overflow: hidden;
     }
   }
 }
